--- a/_posts/0000-01-02-g0kao.md
+++ b/_posts/0000-01-02-g0kao.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to our second slide"
 ---
-Your text
+Some test text to show file edited
 Use the left arrow to go back!
